Fix alignment for RTL languages

--- a/static/css/hugo-theme.css
+++ b/static/css/hugo-theme.css
@@ -1,5 +1,9 @@
 /* Insert here special css for hugo theme, on top of any other imported css */
 
+/* Fix alignment for RTL languages
+p, h1, h2, h3, li, ol {
+  text-align: initial;
+}
 
 /* Table of contents */
 
